Route GC diagnostics through unified logging